; ModuleID = '/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-engine.c_tl_check_get.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/photo/extr_photo-engine.c_tl_check_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@index_mode = common dso_local global i32 0, align 4
@write_only = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [50 x i8] c"Get operations are unsupported in write_only mode\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tl_check_get() #0 {
  %1 = load i32, i32* @index_mode, align 4
  %2 = icmp ne i32 %1, 0
  %3 = xor i1 %2, true
  %4 = zext i1 %3 to i32
  %5 = call i32 @assert(i32 %4)
  %6 = load i64, i64* @write_only, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 @tl_fetch_set_error_format(i32 -4001, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  br label %10

10:                                               ; preds = %8, %0
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @tl_fetch_set_error_format(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
